// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`installing slack app shows a failure message when we fail to install the app 1`] = `
<InstallationStatus
  errors={
    Array [
      "This error message should be displayed on UI",
    ]
  }
  installingSlackApplication={false}
  successInstallationSlackApplication={false}
>
  <WithStyles(Typography)
    style={
      Object {
        "color": "red",
      }
    }
    variant="subheading"
  >
    <Typography
      align="inherit"
      classes={
        Object {
          "alignCenter": "MuiTypography-alignCenter-165",
          "alignJustify": "MuiTypography-alignJustify-167",
          "alignLeft": "MuiTypography-alignLeft-164",
          "alignRight": "MuiTypography-alignRight-166",
          "body1": "MuiTypography-body1-161",
          "body2": "MuiTypography-body2-160",
          "button": "MuiTypography-button-163",
          "caption": "MuiTypography-caption-162",
          "colorError": "MuiTypography-colorError-175",
          "colorInherit": "MuiTypography-colorInherit-171",
          "colorPrimary": "MuiTypography-colorPrimary-172",
          "colorSecondary": "MuiTypography-colorSecondary-173",
          "colorTextSecondary": "MuiTypography-colorTextSecondary-174",
          "display1": "MuiTypography-display1-156",
          "display2": "MuiTypography-display2-155",
          "display3": "MuiTypography-display3-154",
          "display4": "MuiTypography-display4-153",
          "gutterBottom": "MuiTypography-gutterBottom-169",
          "headline": "MuiTypography-headline-157",
          "noWrap": "MuiTypography-noWrap-168",
          "paragraph": "MuiTypography-paragraph-170",
          "root": "MuiTypography-root-152",
          "subheading": "MuiTypography-subheading-159",
          "title": "MuiTypography-title-158",
        }
      }
      color="default"
      gutterBottom={false}
      headlineMapping={
        Object {
          "body1": "p",
          "body2": "aside",
          "display1": "h1",
          "display2": "h1",
          "display3": "h1",
          "display4": "h1",
          "headline": "h1",
          "subheading": "h3",
          "title": "h2",
        }
      }
      noWrap={false}
      paragraph={false}
      style={
        Object {
          "color": "red",
        }
      }
      variant="subheading"
    >
      <h3
        className="MuiTypography-root-152 MuiTypography-subheading-159"
        style={
          Object {
            "color": "red",
          }
        }
      >
        Failed to install.
        <br />
        Errors: 
        This error message should be displayed on UI
      </h3>
    </Typography>
  </WithStyles(Typography)>
</InstallationStatus>
`;

exports[`installing slack app shows a success message when a user successfully installs the app 1`] = `
<InstallationStatus
  errors={Array []}
  installingSlackApplication={false}
  successInstallationSlackApplication={true}
>
  <WithStyles(Typography)
    style={
      Object {
        "color": "green",
      }
    }
    variant="subheading"
  >
    <Typography
      align="inherit"
      classes={
        Object {
          "alignCenter": "MuiTypography-alignCenter-165",
          "alignJustify": "MuiTypography-alignJustify-167",
          "alignLeft": "MuiTypography-alignLeft-164",
          "alignRight": "MuiTypography-alignRight-166",
          "body1": "MuiTypography-body1-161",
          "body2": "MuiTypography-body2-160",
          "button": "MuiTypography-button-163",
          "caption": "MuiTypography-caption-162",
          "colorError": "MuiTypography-colorError-175",
          "colorInherit": "MuiTypography-colorInherit-171",
          "colorPrimary": "MuiTypography-colorPrimary-172",
          "colorSecondary": "MuiTypography-colorSecondary-173",
          "colorTextSecondary": "MuiTypography-colorTextSecondary-174",
          "display1": "MuiTypography-display1-156",
          "display2": "MuiTypography-display2-155",
          "display3": "MuiTypography-display3-154",
          "display4": "MuiTypography-display4-153",
          "gutterBottom": "MuiTypography-gutterBottom-169",
          "headline": "MuiTypography-headline-157",
          "noWrap": "MuiTypography-noWrap-168",
          "paragraph": "MuiTypography-paragraph-170",
          "root": "MuiTypography-root-152",
          "subheading": "MuiTypography-subheading-159",
          "title": "MuiTypography-title-158",
        }
      }
      color="default"
      gutterBottom={false}
      headlineMapping={
        Object {
          "body1": "p",
          "body2": "aside",
          "display1": "h1",
          "display2": "h1",
          "display3": "h1",
          "display4": "h1",
          "headline": "h1",
          "subheading": "h3",
          "title": "h2",
        }
      }
      noWrap={false}
      paragraph={false}
      style={
        Object {
          "color": "green",
        }
      }
      variant="subheading"
    >
      <h3
        className="MuiTypography-root-152 MuiTypography-subheading-159"
        style={
          Object {
            "color": "green",
          }
        }
      >
        Successfully installed! The Strand bot should have DM'd you with setup instructions.
      </h3>
    </Typography>
  </WithStyles(Typography)>
</InstallationStatus>
`;
